   
   2 Jan 2019     'correct manduca init'
                              Correct classloader parameters in function.php according to the class-looader modifications in prev. commit.
                              
   3 Jan 2019     'link function enhancement'
                              utf-8 for link manipulation, some documentation.
                              
   14 Jan 2019    'fix title filter'
                              Page number was missing from the title of paged archives etc. Fixed.
                              
   17 Jan 2019    'fix Guttenberg issue'
                              Using Guttenberg generates errors because svg handler.
                              So far only the frontend applied it, ant this was not a problem
                              
   18 Jan 2019    'date difference in Hungarian'
                              The date difference WP function in Hungarien language was unusable.
                              I made the function in Hungarian_Contents class.

   18 Jan, 2019   'link aria-label changes'
                              Based on user feedbacks: external, open in new window and Google map indicators in aria-label
                              put in brackets,
                              + all indicators included in bracket.
   19 Jan, 2019   'add data filter'
                              Add manduca_link_rel filter to link function class.
                              Also documented in docs/hooks.txt
                              
   22 Jan, 2019   'fix skiplink issues'
                              Because Voiceover  cannot handle the links, necessary to apply javascripts to have jump links accessible.
                              Also, accessible back-to-top links included.
                              Double arrow-up svg icon included.
                              In order to give focus to header, tabindex attribute introduced. 