@@ -3,10 +3,29 @@
  *
  * This is the template that displays all of the <head> section and everything up until <div id="content">
  *
- * @theme: Manduca - focus on accessibility 
  * @since 1.0
- * @version 17.10.11
+ * @last mod 17.11
  **/
+
+ 
+/*  This file is part of WordPress theme named Manduca - focus on accessibility.
+ *
+	Copyright (C) 2015-2018  Zsolt Edelényi (ezs@web25.hu)
+
+    Manduca is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    in /assets/docs/licence.txt.  If not, see <https://www.gnu.org/licenses/>.
+*/
+
 ?>
 <!DOCTYPE html>
 <html <?php language_attributes(); ?>>
